--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "flexgrid-sass",
   "version": "1.0.0",
-  "description": "Flexboxgrid make with sass.",
-  "style": "dist/flexboxgrid.css",
-  "main": "dist/flexboxgrid.css",
+  "description": "Flexgrid make with sass.",
+  "style": "dist/flexgrid.css",
+  "main": "dist/flexgrid.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/davidmds/flexboxgrid-sass.git"
+    "url": "git://github.com/davidmds/flexgrid-sass.git"
   },
   "keywords": [
     "flexbox",
@@ -20,14 +20,15 @@
   "author": "@davidmds",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/davidmds/flexboxgrid-sass/issues"
+    "url": "https://github.com/davidmds/flexgrid-sass/issues"
   },
-  "homepage": "https://github.com/davidmds/flexboxgrid-sass",
+  "homepage": "https://github.com/davidmds/flexgrid-sass",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
